crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@merge_nested_if_triggers_from_middle_level.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/merge_nested_if_triggers_from_middle_level.sv
---
module top; always_comb if (a && b && c) y = 1; endmodule
