crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@merge_nested_if_wraps_or_conditions.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/merge_nested_if_wraps_or_conditions.sv
---
module top; always_comb if ((a || b) && (c || d)) y = 1; endmodule
