crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_connection_multiline_trailing_comma_style.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_connection_multiline_trailing_comma_style.sv
---
module child(input a, input b, input c); endmodule
module top;
child u(
    .a(),
    .b(),
    .c(),
);
endmodule
