crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_available_without_diagnostics.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_available_without_diagnostics.sv
---
module child #(parameter A = 1, parameter B) (); endmodule
module top; child #(.A(1), .B()) u(); endmodule
